# own_authentication_system

./: .gitignore  pyproject.toml  requirements
api/: serializers.py
auth_system/: settings.py  urls.py
core/: managers.py  middleware.py  models.py  permissions.py
